[package]
name = "jxon"
version = "0.1.0"
authors = ["Nicholas Farshidmehr <nick385827184@gmail.com>"]
edition = "2018"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
quick-xml = "0.17"
