[package]
name = "jxon"
version = "0.5.0"
authors = ["Nicholas Farshidmehr <nick385827184@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
homepage = "https://github.com/definitelynobody/jxon"
repository = "https://github.com/definitelynobody/jxon"
description = "Convert XML to a serde_json::Value and back quickly using quick-xml."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
quick-xml = "0.17"
